%%{init: {"theme":"neutral","er":{"layoutDirection":"LR","minEntityWidth":180,"minEntityHeight":90,"entityPadding":12},"themeVariables":{"fontSize":"12px"}}}%%
erDiagram
    cri ||--o{ documento : emite
    cri ||--o{ imovel : registra
    imovel ||--o{ documento : possui
    pessoas ||--o{ imovel : proprietario
    documento ||--o{ lancamento : gera
    lancamento o|--o{ documento : cria
    lancamento_tipo ||--o{ lancamento : classifica
    lancamento ||--o{ lancamento_pessoa : envolve
    pessoas ||--o{ lancamento_pessoa : participa
    lancamento ||--o{ origem : possui
    origem ||--o| origem_fim_cadeia : fim_cadeia
    cri o|--o{ origem : referencia
    cri o|--o{ lancamento : cri_origem
    cartorio_transmissao o|--o{ lancamento : transmissao
    tis ||--o{ tis_imovel : vincula
    imovel ||--o{ tis_imovel : vincula
    terra_indigena_referencia ||--o{ tis : referencia

    cri {
      int id PK
      string nome
      string cns
      string estado
      string cidade
      string endereco
    }

    cartorio_transmissao {
      int id PK
      string nome
      string cns
      string estado
      string cidade
      string endereco
    }

    pessoas {
      int id PK
      string cpf
      string rg
      date data_nascimento
      string email
      string telefone
      string nome
    }

    imovel {
      int id PK
      string nome
      string observacoes
      date data_cadastro
      int cartorio_id FK
      int proprietario_id FK
      bool arquivado
    }

    documento {
      int id PK
      string numero
      date data
      string livro
      string folha
      date data_cadastro
      int cri_id FK
      int imovel_id FK
      string tipo
      bool is_principal
      int lancamento_origem_id FK
      string sigla_patrimonio_publico
    }

    lancamento_tipo {
      int id PK
      string tipo
      bool requer_detalhes
      bool requer_transmissao
      bool requer_cartorio_origem
      bool requer_data_origem
      bool requer_descricao
      bool requer_folha_origem
      bool requer_forma
      bool requer_livro_origem
      bool requer_observacao
      bool requer_titulo
    }

    lancamento {
      int id PK
      date data
      decimal valor_transacao
      decimal area
      string detalhes
      string observacoes
      date data_cadastro
      int documento_id FK
      int tipo_id FK
      int cri_origem_id FK
      string descricao
      string forma
      string titulo
      int numero_lancamento
      int cartorio_transmissao_id FK
      string livro_transmissao
      string folha_transmissao
      date data_transmissao
    }

    lancamento_pessoa {
      int id PK
      string tipo
      string nome_digitado
      int lancamento_id FK
      int pessoa_id FK
    }

    origem {
      int id PK
      int lancamento_id FK
      int cri_id FK
      int indice
      string tipo
      string numero
      string livro
      string folha
      date data
      string observacoes
    }

    origem_fim_cadeia {
      int id PK
      int origem_id FK
      string tipo_fim_cadeia
      string especificacao_fim_cadeia
      string classificacao_fim_cadeia
    }

    tis {
      int id PK
      string codigo
      string etnia
      date data_cadastro
      int terra_referencia_id FK
      decimal area
      string estado
      string nome
    }

    tis_imovel {
      int id PK
      int tis_id FK
      int imovel_id FK
    }

    terra_indigena_referencia {
      int id PK
      string codigo
      string nome
      string etnia
      string estado
      string municipio
      decimal area_ha
      string fase
      string modalidade
      string coordenacao_regional
      date data_regularizada
      date data_homologada
      date data_declarada
      date data_delimitada
      date data_em_estudo
    }
